--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "@react-hook/window-size": "^3.0.7",
+    "@types/styled-components": "^5.1.19",
     "axios": "^0.24.0",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-confetti": "^6.0.1",
     "react-dom": "17.0.2",
-    "react-use-window-size": "^1.0.1"
+    "react-use-window-size": "^1.0.1",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
